--- a/auth-server.yml
+++ b/auth-server.yml
@@ -17,9 +17,9 @@ security:
 # and token store
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/auth
+    url: jdbc:mysql://localhost:3307/auth
     username: root
-    password: password
+    password: root
     driver-class: com.mysql.jdbc.Driver
 
   jpa:
