--- a/auth-server.yml
+++ b/auth-server.yml
@@ -56,4 +56,4 @@ eureka:
     preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://eurekaregistry:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
