--- a/auth-server.yml
+++ b/auth-server.yml
@@ -21,9 +21,9 @@ logging:
 # and token store
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/auth
+    url: jdbc:mysql://localhost:3306/auth
     username: root
-    password: root
+    password: 
     driver-class: com.mysql.jdbc.Driver
 
   jpa:
