--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -8,7 +8,7 @@ spring:
   aop:
     proxy-target-class: true
   zipkin:
-    baseUrl: http://localhost:9411/
+    baseUrl: http://103.21.53.12:9411/
   sleuth:
     sampler:
 # Generally the tracing data volume can be quite high; so we can tell Spring sleuth to
@@ -46,8 +46,8 @@ security:
       userAuthorizationUri: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}/oauth/authorize
       clientId: acme
       clientSecret: acmesecret
-      registered-redirect-uri: http://localhost:8765/login
-      pre-established-redirect-uri: http://localhost:8765/login
+      registered-redirect-uri: http://103.21.53.12:8765/login
+      pre-established-redirect-uri: http://103.21.53.12:8765/login
       use-current-uri: false
     resource:
       jwt:
@@ -104,14 +104,14 @@ hystrix:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://103.21.53.12:8761/eureka/
 
 ---
 # Auth-server instance when used on Docker
 spring:
   profiles: docker
   zipkin:
-    baseUrl: http://localhost:9411/
+    baseUrl: http://103.21.53.12:9411/
 
 eureka:
 # Register our microservices to Eureka using hostnames in a Docker environment will not work, they will all get
@@ -120,7 +120,7 @@ eureka:
     preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://103.21.53.12:8761/eureka/
 
 # The OAuth2 server definition that would be used to send the authorization requests to
 authserver:
