--- a/auth-server.yml
+++ b/auth-server.yml
@@ -7,7 +7,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://103.21.53.12:8761/eureka/
 
 security:
   user:
@@ -21,7 +21,7 @@ logging:
 # and token store
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/auth
+    url: jdbc:mysql://103.21.53.12:3306/auth
     username: root
     password: 
     driver-class: com.mysql.jdbc.Driver
@@ -56,4 +56,4 @@ eureka:
     preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://103.21.53.12:8761/eureka/
