--- a/task-webservice.yml
+++ b/task-webservice.yml
@@ -5,11 +5,11 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://103.21.53.12:8761/eureka/
 
 spring:
   zipkin:
-    baseUrl: http://localhost:9411/
+    baseUrl: http://103.21.53.12:9411/
   sleuth:
     sampler:
       percentage: 1.0
@@ -33,7 +33,7 @@ security:
 spring:
   profiles: docker
   zipkin:
-    baseUrl: http://localhost:9411/
+    baseUrl: http://103.21.53.12:9411/
 
 eureka:
 # Register our microservices to Eureka using hostnames in a Docker environment will not work, they will all get
@@ -42,7 +42,7 @@ eureka:
     preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://103.21.53.12:8761/eureka/
 
 # Define the port where the API gateway server would be running. This could always be port 8080
 # since each docker container has it's own IP
