--- a/web-portal.yml
+++ b/web-portal.yml
@@ -6,7 +6,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://103.21.53.12:8761/eureka/
 
 logging:
   level:
@@ -27,7 +27,7 @@ eureka:
     preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://103.21.53.12:8761/eureka/
 # Define the port where the web portal server would be running. This could always be port 8080
 # since each docker container has it's own IP
 server:
