--- a/webservice-registry.yml
+++ b/webservice-registry.yml
@@ -10,7 +10,7 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://103.21.53.12:${server.port}/eureka/
 
 ---
 
@@ -23,4 +23,4 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://103.21.53.12:${server.port}/eureka/
