--- a/auth-server.yml
+++ b/auth-server.yml
@@ -21,7 +21,7 @@ logging:
 # and token store
 spring:
   datasource:
-    url: jdbc:mysql://103.21.53.12:3306/auth
+    url: jdbc:mysql://localhost:3306/auth
     username: root
     password: 
     driver-class: com.mysql.jdbc.Driver
@@ -39,9 +39,9 @@ spring:
 # Datasource and JPA configuration to be used for storing the OAuth authorization details
 # and token store
   datasource:
-    url: jdbc:mysql://mysqldb:3307/auth
+    url: jdbc:mysql://localhost:3306/auth
     username: root
-    password: root
+    password: 
     driver-class: com.mysql.jdbc.Driver
 
   jpa:
