--- a/user-webservice.yml
+++ b/user-webservice.yml
@@ -33,7 +33,7 @@ security:
 spring:
   profiles: docker
   zipkin:
-    baseUrl: http://localhost:9411/
+    baseUrl: http://103.21.53.12:9411/
 
 eureka:
 # Register our microservices to Eureka using hostnames in a Docker environment will not work, they will all get
